Update Maven build command to include project directory

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,4 +32,4 @@ jobs:
       run: ls -R
 
     - name: Build With Maven
-      run: mvn clean install
+      run: cd todoapp-swe451; mvn clean install
