Add unit test step to CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,10 @@ jobs:
     - name: List File (debugging)
       run: ls -R
 
+    - name: Run Unit tests
+      run: mvn test
+      working-directory: ./todoapp-swe451
+
     - name: Build With Maven
       run:  mvn clean install
       working-directory: ./todoapp-swe451
